test/valid-data/type-indexed-access-object-2/main.ts
interface SomeObject {
    abc: "foo";
    def?: "bar";
}

const obj: SomeObject = { abc: "foo" };
export type MyType = (typeof obj)["def"];
