test/invalid-data/literal-object-type/main.ts
const obj = {abc: "def"};
export type MyType = typeof obj;
